--- a/event-processing/k8s/alerting-deployment.yaml
+++ b/event-processing/k8s/alerting-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: alerting-service
           image: alerting-service:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082
 ---
