--- a/event-processing/k8s/consumer-deployment.yaml
+++ b/event-processing/k8s/consumer-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: consumer-service
           image: consumer-service:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
 ---
