--- a/event-processing/k8s/kafka-deployment.yaml
+++ b/event-processing/k8s/kafka-deployment.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
         - name: kafka
-          image: bitnami/kafka:latest
+          image: bitnami/kafka:3.5
           env:
             - name: KAFKA_CFG_ZOOKEEPER_CONNECT
-              value: zookeeper:2181
+              value: zookeeper:2181   # <-- Double check the service name!
             - name: ALLOW_PLAINTEXT_LISTENER
               value: "yes"
             - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
@@ -25,7 +25,7 @@ spec:
             - name: KAFKA_CFG_LISTENERS
               value: PLAINTEXT://:9092
             - name: KAFKA_CFG_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka:9092
+              value: PLAINTEXT://kafka.event-system.svc.cluster.local:9092
           ports:
             - containerPort: 9092
 ---
