--- a/event-processing/k8s/producer-deployment.yaml
+++ b/event-processing/k8s/producer-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: producer-service
           image: producer-service:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
 ---
