Updated for demo

--- a/alerting-service/src/main/resources/application.yaml
+++ b/alerting-service/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ spring:
     name: alerting-service
   kafka:
     bootstrap-servers: kafka:9092
+    listener:
+      auto-startup: true
     consumer:
       group-id: alerting-service
       auto-offset-reset: earliest
