--- a/consumer-service/src/main/resources/application.yaml
+++ b/consumer-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: consumer-service
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: kafka:9092 
     consumer:
       group-id: event-consumer
       auto-offset-reset: earliest
@@ -10,6 +10,7 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     listener:
       missing-topics-fatal: false
+      auto-startup: true
   datasource:
     url: jdbc:postgresql://postgres:5432/eventdb
     username: postgres
